Fix swagger documentation
